// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-a1052e44-1 ZpQCj undefined "
  >
    button test
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-a1052e44-2 frqjg"
  >
    button test
  </button>
</div>
`;
